# docs-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  skills-lock.json
.github/workflows/: build-and-push.yml
app/: main.py
k8s/: helmfile.yaml.gotmpl
k8s/charts/docs-ai/: Chart.yaml  values.yaml
k8s/charts/docs-ai/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  poddisruptionbudget.yaml  service.yaml  serviceaccount.yaml
k8s/environments/: prod.yaml  stag.yaml
skills/docs-ai-integration/: SKILL.md
src/: agent.py  cache.py  docs_loader.py  rate_limiter.py  settings.py
src/agent/prompts/: chat_system.j2
src/prompts/: chat_system.j2
src/routers/: chat.py
src/settings/: __init__.py
tests/: conftest.py  test_chat.py  test_docs_loader.py  test_lifespan.py  test_rate_limiter.py  test_system_prompt.py
tests/evals/: cases.csv  test_agent_evals.py
