[project]
name = "docs-ai"
version = "0.1.0"
description = "Kelet docs AI assistant"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-ai[bedrock]>=1.0.15",
    "pydantic-settings>=2.6",
    "redis[asyncio]>=5.2",
    "fakeredis>=2.26",  # in-memory fallback when REDIS_URL is not set
    "httpx>=0.28",
    "rank-bm25>=0.2.2",
    "jinja2>=3.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-evals>=0.1",
    "pytest-xdist>=3.6",
    "pandas>=2.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "app"]
addopts = "--ignore=tests/evals"  # evals require a running service; run with: pytest tests/evals

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "app"]
