[project]
name = "docs-ai"
version = "0.1.0"
description = "Kelet docs AI assistant"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-ai>=1.0.15",
    "pydantic-settings>=2.6",
    "redis[asyncio]>=5.2",
    "fakeredis>=2.26",  # in-memory fallback when REDIS_URL is not set
    "httpx>=0.28",
    "rank-bm25>=0.2.2",
    "jinja2>=3.1",
    "kelet>=1.3.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-evals>=0.1",
    "pytest-xdist>=3.6",
    "pandas>=2.2",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.coverage.run]
source = ["app", "src"]

[tool.coverage.report]
exclude_also = [
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
  "pragma: no cover",
  "import *",
  # 1. Exclude an except clause of a specific form:
  "except ValueError:\\n\\s*assume\\(False\\)",
  # 2. Comments to turn coverage on and off:
  "no cover: start(?s:.)*?no cover: stop",
  # 3. A pragma comment that excludes an entire file:
  "\\A(?s:.*# pragma: exclude file.*)\\Z",
  "@pytest\\.fixture.*",
  "@pytest\\.mark.*",
]

omit = [
  "tests/*",
  "/tmp/*",
  "/private/*",
  "*/temporary/*"
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportMissingImports = "error"
extraPaths = ["app", "src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
log_cli = true
log_cli_level = "WARNING"
filterwarnings = [
    "ignore::DeprecationWarning:pyiceberg.*",
    "ignore::DeprecationWarning:pyparsing.*",
    "ignore:.*Logfire API returned status code.*:UserWarning",
    "ignore::pydantic.PydanticDeprecatedSince212",
]

[tool.logfire]
pydantic_plugin_record = "failure"

[tool.uv.sources]
kcommon = { git = "https://github.com/Kelet-ai/kelet", subdirectory = "common/python" }
#kcommon = { path = "../common/python", editable = true } # for local development

